--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ ipython>=8.22.2,<9.0
 jupyter>=1.0.0,<2.0
 mlflow==2.20.1
 xgboost>=2.0.3,<3.0
-shap==0.46.0
 seaborn>=0.13.2,<1.0
 keras>=3.8.0,<4.0
 torch>=2.6.0,<3.0
+scikit-image==0.24.0
+numpy==1.26.4
